# mozkeys

./: Cargo.toml  README.md  build.rs  index.html  mouseoverlay.md  push-release.md
.github/workflows/: release.yml
docs/: architecture_diagram.md  mouseoverlay.md
src/: main.rs
src/core/: acceleration.rs  config.rs  dispatcher.rs  key_state.rs  mod.rs  state_machine.rs
src/platform/windows/: hook.rs  keycodes.rs  mod.rs  overlay.rs  send_input.rs  timers.rs  tray.rs
src/runtime/: mod.rs  movement_loop.rs
